# intellij-mcp-orchestration

./: .env.example  .gitignore  .sops.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  next-steps.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ui-next-steps.md
agents-hub/: .env.example  Makefile  README.md  RUN.md  __init__.py  pyproject.toml
agents-hub/app/: __init__.py  config.py  errors.py  logging_config.py  main.py  middleware.py  registry.py
agents-hub/app/agents/: orchestration.py
agents-hub/app/schemas/: __init__.py  invoke.py  manifest.py  responses.py
agents-hub/tests/: conftest.py  test_agents.py  test_finops_adaptive.py  test_http.py  test_invoke_schema.py  test_registry.py
agents-hub/tests/fixtures/: sample_manifest.yaml
server/: README.md  pyproject.toml
server/routes/: finops.py
server/routes/fixtures/: README.md  agents.json  console.db  finops_events.json  finops_pull_requests.json  notifications.json  policy_deployments.json  routing_simulation.json  security_users.json  server_health.json  telemetry_metrics.json  telemetry_runs.json
server/scripts/: seed_telemetry_events.py
server/src/app/: __init__.py
server/src/console_mcp_server/: __init__.py  approvals.py  change_plans.py  config.py  database.py  diagnostics.py  fixtures.py  git_providers.py  log_model.py  main.py  marketplace.py  notifications.py  observability.py  policies.py  policy_deployments.py  policy_overrides.py  policy_rollout.py  policy_templates.py  prices.py  registry.py  routes.py  routing.py  schemas.py  schemas_plan.py  secret_validation.py  secrets.py  security.py  servers.py  supervisor.py  telemetry.py
server/tests/: conftest.py  fixtures.py  test_agent_executor.py  test_agent_overrides.py  test_agents_plan.py  test_artifact_generators.py  test_audit_log.py  test_config_routes.py  test_database.py  test_finops_exports.py  test_finops_manifest.py  test_generate_artifact.py  test_git_providers.py  test_langgraph.py  test_marketplace.py  test_observability.py  test_onboard_validate.py  test_plan_executor.py  test_planner.py  test_rag.py  test_rbac.py  test_rbac_api.py  test_routes.py  test_routing_bandit.py  test_routing_fixtures.py  test_routing_simulator.py  test_telemetry.py
wrappers/glm46-mcp-server/: README.md  pyproject.toml
wrappers/glm46-mcp-server/glm46_mcp_server/: __init__.py  __main__.py  (+6 more)
(+491 files in other folders)
